<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity_Ver_Imagen_Alumno" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imgAlumno"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.50"
            android:scaleType="centerCrop"
            android:src="@drawable/silueta" />
    </LinearLayout>

    <Button
        android:id="@+id/btBorrarImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btSeleccionarFoto"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/btSeleccionarFoto"
        android:layout_marginBottom="17dp"
        android:onClick="borrarFoto"
        android:text="@string/borrar_imagen" />

    <Button
        android:id="@+id/btSeleccionarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btBorrarImagen"
        android:layout_centerHorizontal="true"
        android:onClick="seleccionarFoto"
        android:text="@string/seleccionar_foto" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btSeleccionarFoto"
        android:layout_alignLeft="@+id/btSeleccionarFoto"
        android:layout_alignRight="@+id/btSeleccionarFoto"
        android:layout_marginTop="20dp"
        android:onClick="tomarFoto"
        android:text="@string/tomar_foto" />

</RelativeLayout>